--- a/module/ESModule/模块化.md
+++ b/module/ESModule/模块化.md
@@ -4,10 +4,35 @@
 
 - CommonJS 模块就是一个对象
 - 运行时加载（即加载模块时，先整体加载模块对象，然后生成一个新对象，再从这个对象上获取方法和属性的加载方式）。要在运行时，才可以确认输入和输出的变量，以及模块间的依赖。
+- 输出的是值的拷贝
   
 
-**ES6 模块化**
+**ES6 模块**
 
 - 静态加载，即编译的时候就可以确定模块的输入与输出，以及模块间的依赖关系。
 - ES6 模块不是对象，是通过 `export` 命令输出的代码片段。使用时，使用 `import` 命令导入。
-- 
+- 静态加载：
+  `import {a, b ,c} from 'obj';`
+  指的是从 obj 加载 a,b,c 三个方法，而其它方法不加载。
+- `export` 输出的值跟模块内部的变量是动态绑定的关系，模块内部的值改变，输出的值也会跟着改变。这一点与 CommonJS 不一样，**<font color=#EE2A6A>CommonJS 输出的是值的拷贝，而ES6 模块输出的是值的引用。</font>**
+- `import` 命令使用 `*` 整体加载某个模块，例如：
+  `import * as Module from 'module.js'`，module.js 输出的所有值都在 Module 这个对象上。
+- `export default` 命令可以为模块指定默认输出。使用 `import` 引入 `export default` 命令输出的模块，可以不用带 `{}`，并且不需要知道原模块里的变量叫什么名字，可以自己给 `export default` 输出的变量命名。
+- 一个模块只能有一个默认输出，所以一个模块中，只能使用一次 `export default` 命令。
+- `export default` 其实是相当于 `export` 一个 `default` 变量，所以后面不允许跟变量声明语句
+- `import()` 命令：用于动态加载模块（也就是运行时加载模块），返回的是一个 **Promise 对象**。
+  `import()` 和 node 的 `require`具有同样的功能，不同的是前者是异步加载吗哦快，而后者是同步加载。
+
+## ES6 模块的加载
+### 浏览器中的加载
+```javascript
+<script src="module.js" type="module"><script>
+```
+在 script 标签中，添加 type="module" 属性，浏览器就会默认这是一个 ES6 模块。
+
+浏览器的 ES6 模块加载是异步的，不会阻止页面的渲染，会等页面渲染完成之后再执行模块。相当于 `defer`。
+
+如果想要模块加载完成之后立刻执行，则可以打开 `async` 开关。这时只要模块加载完成，渲染引擎就会中断渲染，立刻执行模块，执行完毕之后再恢复渲染。
+```javascript
+<script src="module.js" type="module" async><script>
+```
