update frontend interview

--- a/module/ESModule/模块化.md
+++ b/module/ESModule/模块化.md
@@ -36,3 +36,7 @@
 ```javascript
 <script src="module.js" type="module" async><script>
 ```
+## CommonJS 模块的加载原理
+  CommonJS 的一个模块，就是一个脚本文件。使用 `require` 第一次加载某个模块时，就会执行这个模块，并且在内存中生成一个对象。
+
+  CommonJS 模块无论 require 多少次，也只会在第一次 require 的时候执行脚本，之后都是直接去内存中读取执行结果。除非手动清楚系统缓存。
